--- a/eave/resource/template.html
+++ b/eave/resource/template.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!--<link rel="stylesheet" href="https://docs.konghq.com/assets/styles.css" />-->
-  {{style}}
+  <!-- <link rel="stylesheet" href="https://docs.konghq.com/assets/styles.css" /> -->
+  <style>{{style}}</style>
 
   <style>
     .main-content {
