--- a/eave/resource/template.html
+++ b/eave/resource/template.html
@@ -16,6 +16,16 @@
     .content {
       padding: 20px;
     }
+    @media print {
+      pre{
+        white-space:pre-wrap;
+        word-wrap: break-word;
+      }
+      pre>code{
+        white-space:pre-wrap;
+        word-wrap: break-word;
+      }
+    }
   </style>
 
 </head>
