--- a/eave/template.html
+++ b/eave/template.html
@@ -31,6 +31,12 @@
         white-space:pre-wrap;
         word-wrap: break-word;
       }
+      .main-content {
+        padding: 0 5px;
+      }
+      .content {
+        padding: 5px;
+      }
     }
   </style>
 
