--- a/eave/template.html
+++ b/eave/template.html
@@ -22,6 +22,12 @@
     .content {
       padding: 20px;
     }
+    .min-width-2 {
+      min-width: 30px;
+    }
+    .min-width-3 {
+      min-width: 45px;
+    }
     @media print {
       pre{
         white-space:pre-wrap;
@@ -125,16 +131,16 @@
                     <th>Uri 参数</th>
                     <th>类型</th>
                     <th>描述</th>
-                    <th>必须</th>
-                    <th>默认值</th>
-                    <th>示例</th>
+                    <th class="min-width-2">必须</th>
+                    <th class="min-width-3">默认值</th>
+                    <th class="min-width-2">示例</th>
                   %else:
                     <th>Uri Parameters</th>
                     <th>Type</th>
                     <th>Description</th>
-                    <th>Required</th>
-                    <th>Default</th>
-                    <th>Example</th>
+                    <th class="min-width-2">Required</th>
+                    <th class="min-width-3">Default</th>
+                    <th class="min-width-2">Example</th>
                   %endif
                 </tr>
               </thead>
