--- a/eave/template.html
+++ b/eave/template.html
@@ -110,9 +110,9 @@
 
         <h1 id="{{api.id}}">{{api.title}}</h1>
 
-        %if api.uri or not api.from_md:
+        %if api.url:
           <div class="endpoint {{api.method.lower()}}">
-            <a href="{{api.uri_escape}}" target="_blank" style="color: inherit">{{api.uri_escape}}</a>
+            <a href="{{api.url_escape}}" target="_blank" style="color: inherit">{{api.url_escape}}</a>
           </div>
         %endif
 
@@ -128,19 +128,19 @@
             <div class="alert alert-ee">{{markdown(api.description, escape=False)}}</div>
           %endif
 
-          %if api.uri_params:
+          %if api.path_params:
             <table>
               <thead>
                 <tr>
                   %if language == 'zh':
-                    <th>Uri 参数</th>
+                    <th>Path 参数</th>
                     <th>类型</th>
                     <th>描述</th>
                     <th class="min-width-2">必须</th>
                     <th class="min-width-3">默认值</th>
                     <th class="min-width-2">示例</th>
                   %else:
-                    <th>Uri Parameters</th>
+                    <th>Path Parameters</th>
                     <th>Type</th>
                     <th>Description</th>
                     <th>Required</th>
@@ -150,7 +150,7 @@
                 </tr>
               </thead>
               <tbody>
-                %for param in api.uri_params:
+                %for param in api.path_params:
                   <tr>
                     <td><code>{{param.name}}</code></td>
                     <td><em>{{param.type}}</em></td>
@@ -237,9 +237,14 @@
 
             %if api.content_types:
               <p>
-                Content-Types:
+                %if language == 'zh':
+                  传参可用的
+                %else:
+                  Body
+                %endif
+                <code>Content-Type</code>:
                 %for t in api.content_types:
-                  <code>{{t}}</code>
+                  <em>{{t}}</em>
                 %endfor
               </p>
             %endif
