--- a/eave/template.html
+++ b/eave/template.html
@@ -256,6 +256,7 @@
                 %endif
                 <code>Content-Type</code>:
                 %for t in api.content_types:
+                  &nbsp;
                   <em>{{t}}</em>
                 %endfor
               </p>
