--- a/eave/template.html
+++ b/eave/template.html
@@ -250,9 +250,9 @@
             %if api.content_types:
               <p>
                 %if language == 'zh':
-                  传参可用的
+                  接受的
                 %else:
-                  Body
+                  Accept 
                 %endif
                 <code>Content-Type</code>:
                 %for t in api.content_types:
