--- a/eave/template.html
+++ b/eave/template.html
@@ -250,7 +250,7 @@
             %if api.content_types:
               <p>
                 %if language == 'zh':
-                  接受的
+                  传参使用
                 %else:
                   Accept 
                 %endif
